--- a/package.json
+++ b/package.json
@@ -25,24 +25,24 @@
     "angular-dashboard-components": "git+https://git.csl-intern.local.hcu-hamburg.de/till.degkwitz/angular-dashboard-components.git",
     "angular-highcharts": "^6.2.6",
     "bootstrap": "4.0.0-beta.2",
-    "core-js": "^2.5.7",
+    "core-js": "^2.6.5",
     "d3": "^3.5.17",
     "openlayers": "^4.6.5",
     "rxjs": "^5.5.12",
     "tuio-client": "git+https://git.csl-intern.local.hcu-hamburg.de/cityscope/tuio-client.git",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.2.11",
     "@angular/language-service": "^5.2.11",
     "@types/d3": "^3.5.41",
-    "@types/highcharts": "^5.0.29",
+    "@types/highcharts": "^5.0.39",
     "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.117",
-    "@types/openlayers": "^4.6.12",
-    "codelyzer": "^4.4.4",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^6.14.4",
+    "@types/openlayers": "^4.6.16",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
