--- a/src/app/config.grossborstel.json
+++ b/src/app/config.grossborstel.json
@@ -5,31 +5,37 @@
   "topics": [
     {
       "name": "gruenflaechen",
-      "displayName": "Grün­flä­chen"
+      "displayName": "Greenspace",
+      "displayName_de-DE": "Grün­flä­chen"
     },
     {
       "name": "nahversorgung",
-      "displayName": "Nah­ver­sor­gung"
+      "displayName": "Local supply",
+      "displayName_de-DE": "Nah­ver­sor­gung"
     },
     {
       "name": "kitas",
-      "displayName": "Ki­tas"
+      "displayName": "Daycare",
+      "displayName_de-DE": "Ki­tas"
     }
   ],
   "stages": [
     {
       "name": "before",
-      "displayName": "Vor Bebauung"
+      "displayName": "Before development",
+      "displayName_de-DE": "Vor Bebauung"
     },
     {
       "name": "after",
-      "displayName": "Nach Bebauung"
+      "displayName": "After development",
+      "displayName_de-DE": "Nach Bebauung"
     }
   ],
   "baseLayers": [
     {
       "name": "sozialmonitoring",
-      "displayName": "Sozialmonitoring 2016",
+      "displayName": "Social monitor of 2016",
+      "displayName_de-DE": "Sozialmonitoring 2016",
       "type": "Vector",
       "source": {
         "url": "http://localhost:8080/geoserver/csl/wms?service=WFS&version=1.1.0&request=GetFeature&typeName=csl:sozialmonitoring2016&outputFormat=application/json&srsname=EPSG:4326",
@@ -37,7 +43,8 @@
       },
       "visible": false,
       "legendUrl": "/assets/Gesamtindex2016_Legende.png",
-      "meta": "Quelle: BSW",
+      "meta": "Source: BSW",
+      "meta_de-DE": "Quelle: BSW",
       "style": {
         "fill": {
           "categorizedScale": true
@@ -65,7 +72,8 @@
     },
     {
       "name": "stadtteile",
-      "displayName": "Stadtteile",
+      "displayName": "Wards",
+      "displayName_de-DE": "Stadtteile",
       "type": "WMS",
       "source": {
         "url": "https://geodienste.hamburg.de/HH_WMS_Verwaltungsgrenzen",
@@ -80,11 +88,13 @@
       "zIndex": 10,
       "visible": true,
       "legendUrl": "https://geodienste.hamburg.de/HH_WMS_Verwaltungsgrenzen?request=GetLegendGraphic&version=1.3.0&service=WMS&layer=stadtteile&style=style_verwaltungsgrenzen_stadtteile&format=image/png",
-      "meta": "Quelle: LGV"
+      "meta": "Source: LGV",
+      "meta_de-DE": "Quelle: LGV"
     },
     {
       "name": "geobasis",
-      "displayName": "Stadtkarte Hamburg",
+      "displayName": "Hamburg city plan",
+      "displayName_de-DE": "Stadtkarte Hamburg",
       "type": "WMS",
       "source": {
         "url": "https://geodienste.hamburg.de/HH_WMS_Kombi_DISK_GB",
@@ -98,11 +108,13 @@
         }
       },
       "visible": true,
-      "meta": "Quelle: LGV"
+      "meta": "Source: LGV",
+      "meta_de-DE": "Quelle: LGV"
     },
     {
       "name": "dop20",
-      "displayName": "Luftbilder DOP 20",
+      "displayName": "Aerial photo 20 cm",
+      "displayName_de-DE": "Luftbilder DOP 20",
       "type": "WMS",
       "source": {
         "url": "https://geodienste.hamburg.de/HH_WMS_DOP20",
@@ -116,21 +128,25 @@
         }
       },
       "visible": false,
-      "meta": "Quelle: LGV"
+      "meta": "Source: LGV",
+      "meta_de-DE": "Quelle: LGV"
     },
     {
       "name": "osm",
       "displayName": "OpenStreetMap",
+      "displayName_de-DE": "OpenStreetMap",
       "type": "OSM",
       "source": {},
       "visible": false,
-      "meta": "© OpenStreetMap-Mitwirkende"
+      "meta": "© OpenStreetMap contributors",
+      "meta_de-DE": "© OpenStreetMap-Mitwirkende"
     }
   ],
   "topicLayers": [
     {
       "name": "kitas",
-      "displayName": "Kitas",
+      "displayName": "Daycare centres",
+      "displayName_de-DE": "Kitas",
       "topic": "kitas",
       "type": "Vector",
       "sources": {
@@ -147,7 +163,8 @@
       "visible": true,
       "selectable": true,
       "legendUrl": "assets/legend-kita.png",
-      "meta": "Quelle: BASFI",
+      "meta": "Source: BASFI",
+      "meta_de-DE": "Quelle: BASFI",
       "style": {
         "circle": {
           "radius": 7,
@@ -203,7 +220,8 @@
     },
     {
       "name": "kitasHeatmap",
-      "displayName": "Kitas (Heatmap)",
+      "displayName": "Daycare centres (heatmap)",
+      "displayName_de-DE": "Kitas (Heatmap)",
       "topic": "kitas",
       "type": "Heatmap",
       "sources": {
@@ -220,11 +238,13 @@
       "weightAttributeMax": 350,
       "zIndex": 11,
       "visible": false,
-      "meta": "Quelle: BASFI"
+      "meta": "Source: BASFI",
+      "meta_de-DE": "Quelle: BASFI"
     },
     {
       "name": "kitasGehzeit",
-      "displayName": "Gehzeit zur nächsten Kita",
+      "displayName": "Walking time to nearest daycare",
+      "displayName_de-DE": "Gehzeit zur nächsten Kita",
       "topic": "kitas",
       "type": "WMS",
       "source": {
@@ -241,11 +261,13 @@
       "opacity": 0.6,
       "visible": false,
       "legendUrl": "https://geodienste.hamburg.de/MRH_WMS_REA_Soziales?request=GetLegendGraphic&version=1.3.0&format=image/png&layer=6",
-      "meta": "Quelle: MRH"
+      "meta": "Source: MRH",
+      "meta_de-DE": "Quelle: MRH"
     },
     {
       "name": "stadtteileKitaplaetze",
-      "displayName": "Kitaplätze pro Kind (auf Stadtteilebene)",
+      "displayName": "Daycare places per child in each ward",
+      "displayName_de-DE": "Kitaplätze pro Kind (auf Stadtteilebene)",
       "topic": "kitas",
       "type": "Vector",
       "sources": {
@@ -261,7 +283,8 @@
       "zIndex": 2,
       "visible": false,
       "legendUrl": "assets/legend-kitaprokind.png",
-      "meta": "Quellen: BASFI (Kitaplätze), Statistikamt Nord (Bevölkerungsstruktur)",
+      "meta": "Sources: BASFI (daycare), Statistikamt Nord (population)",
+      "meta_de-DE": "Quellen: BASFI (Kitaplätze), Statistikamt Nord (Bevölkerungsstruktur)",
       "style": {
         "stroke": {
           "color": "purple",
@@ -282,7 +305,8 @@
     },
     {
       "name": "einwohner",
-      "displayName": "Einwohner im Alter 0 bis 6 Jahre",
+      "displayName": "Infants at age 0 - 6 years",
+      "displayName_de-DE": "Einwohner im Alter 0 bis 6 Jahre",
       "topic": "kitas",
       "type": "Vector",
       "sources": {
@@ -299,7 +323,8 @@
       "visible": true,
       "selectable": true,
       "legendHtml": "<div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(255, 0, 0, 0);\"></span>&nbsp;0-9</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(255, 0, 0, 0.2);\"></span>&nbsp;10-24</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(255, 0, 0, 0.4);\"></span>&nbsp;25-49</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(255, 0, 0, 0.6);\"></span>&nbsp;50-89</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(255, 0, 0, 0.8);\"></span>&nbsp;90-</div>",
-      "meta": "Quelle: Statistikamt Nord",
+      "legendHtml_de-DE": "<div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(255, 0, 0, 0);\"></span>&nbsp;0-9</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(255, 0, 0, 0.2);\"></span>&nbsp;10-24</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(255, 0, 0, 0.4);\"></span>&nbsp;25-49</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(255, 0, 0, 0.6);\"></span>&nbsp;50-89</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(255, 0, 0, 0.8);\"></span>&nbsp;90-</div>",
+      "meta": "Source: Statistikamt Nord",
       "style": {
         "fill": {
           "graduatedScale": true
@@ -353,7 +378,8 @@
     },
     {
       "name": "apotheken",
-      "displayName": "Apotheken",
+      "displayName": "Pharmacies",
+      "displayName_de-DE": "Apotheken",
       "topic": "nahversorgung",
       "type": "Vector",
       "source": {
@@ -363,7 +389,8 @@
       "visible": true,
       "selectable": true,
       "legendUrl": "assets/legend-apotheke.png",
-      "meta": "Quelle: OpenStreetMap",
+      "meta": "Source: OpenStreetMap",
+      "meta_de-DE": "Quelle: OpenStreetMap",
       "style": {
         "circle": {
           "radius": 7,
@@ -391,7 +418,8 @@
     },
     {
       "name": "supermaerkte",
-      "displayName": "Supermärkte",
+      "displayName": "Supermarkets",
+      "displayName_de-DE": "Supermärkte",
       "topic": "nahversorgung",
       "type": "Vector",
       "source": {
@@ -401,7 +429,7 @@
       "visible": true,
       "selectable": true,
       "legendUrl": "assets/legend-supermarkt.png",
-      "meta": "Quelle: OpenStreetMap",
+      "meta": "Source: OpenStreetMap",
       "style": {
         "circle": {
           "radius": 7,
@@ -429,7 +457,8 @@
     },
     {
       "name": "apothekenGehzeit",
-      "displayName": "Gehzeit zur nächsten Apotheke",
+      "displayName": "Walking time to nearest pharmacy",
+      "displayName_de-DE": "Gehzeit zur nächsten Apotheke",
       "topic": "nahversorgung",
       "type": "WMS",
       "source": {
@@ -446,11 +475,13 @@
       "opacity": 0.6,
       "visible": false,
       "legendUrl": "https://geodienste.hamburg.de/MRH_WMS_REA_Gesundheit?request=GetLegendGraphic&version=1.3.0&format=image/png&layer=2",
-      "meta": "Quelle: MRH"
+      "meta": "Source: MRH",
+      "meta_de-DE": "Quelle: MRH"
     },
     {
       "name": "supermaerkteGehzeit",
-      "displayName": "Gehzeit zum nächsten Supermarkt",
+      "displayName": "Walking time to nearest supermarket",
+      "displayName_de-DE": "Gehzeit zum nächsten Supermarkt",
       "topic": "nahversorgung",
       "type": "WMS",
       "source": {
@@ -467,11 +498,13 @@
       "opacity": 0.6,
       "visible": false,
       "legendUrl": "https://geodienste.hamburg.de/MRH_WMS_REA_Einzelhandel?request=GetLegendGraphic&version=1.3.0&format=image/png&layer=2",
-      "meta": "Quelle: MRH"
+      "meta": "Source: MRH",
+      "meta_de-DE": "Quelle: MRH"
     },
     {
       "name": "gruenflaechen",
-      "displayName": "Grünflächen",
+      "displayName": "Green areas",
+      "displayName_de-DE": "Grünflächen",
       "topic": "gruenflaechen",
       "type": "Vector",
       "source": {
@@ -481,8 +514,10 @@
       "zIndex": 1,
       "visible": true,
       "selectable": true,
-      "legendHtml": "<div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(160, 82, 45, 0.6);\"></span>&nbsp;Kleingarten</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(60, 179, 113, 0.6);\"></span>&nbsp;Parkanlage</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(124, 252, 0, 0.6);\"></span>&nbsp;Spielplatz</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(72, 209, 204, 0.6);\"></span>&nbsp;Friedhof</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(199, 21, 133, 0.6);\"></span>&nbsp;Schutzgrün</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(106, 90, 205, 0.6);\"></span>&nbsp;anderweitige Nutzung</div>",
-      "meta": "Quelle: LGV",
+      "legendHtml": "<div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(160, 82, 45, 0.6);\"></span>&nbsp;allotment gardens</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(60, 179, 113, 0.6);\"></span>&nbsp;park</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(124, 252, 0, 0.6);\"></span>&nbsp;playground</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(72, 209, 204, 0.6);\"></span>&nbsp;cemetery</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(199, 21, 133, 0.6);\"></span>&nbsp;protective green</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(106, 90, 205, 0.6);\"></span>&nbsp;other</div>",
+      "legendHtml_de-DE": "<div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(160, 82, 45, 0.6);\"></span>&nbsp;Kleingarten</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(60, 179, 113, 0.6);\"></span>&nbsp;Parkanlage</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(124, 252, 0, 0.6);\"></span>&nbsp;Spielplatz</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(72, 209, 204, 0.6);\"></span>&nbsp;Friedhof</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(199, 21, 133, 0.6);\"></span>&nbsp;Schutzgrün</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(106, 90, 205, 0.6);\"></span>&nbsp;anderweitige Nutzung</div>",
+      "meta": "Source: LGV",
+      "meta_de-DE": "Quelle: LGV",
       "style": {
         "fill": {
           "categorizedScale": true
@@ -518,6 +553,7 @@
     {
       "name": "grossborstel",
       "displayName": "Groß Borstel",
+      "displayName_de-DE": "Groß Borstel",
       "type": "Vector",
       "source": {
         "url": "http://localhost:8080/geoserver/csl/wms?service=WFS&version=1.1.0&request=GetFeature&typeName=csl:grossborstel&outputFormat=application/json&srsname=EPSG:4326",
@@ -535,6 +571,5 @@
   ],
   "mapCenter": [9.9880, 53.6126],
   "mapZoom": 14,
-  "mapMinZoom": 11,
   "mapMaxZoom": 18
 }
