--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cosi",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -14,47 +14,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.11",
-    "@angular/common": "^5.2.11",
-    "@angular/compiler": "^5.2.11",
-    "@angular/core": "^5.2.11",
-    "@angular/forms": "^5.2.11",
-    "@angular/http": "^5.2.11",
-    "@angular/platform-browser": "^5.2.11",
-    "@angular/platform-browser-dynamic": "^5.2.11",
-    "@angular/router": "^5.2.11",
-    "angular-dashboard-components": "git+https://git.csl-intern.local.hcu-hamburg.de/till.degkwitz/angular-dashboard-components.git",
-    "angular-highcharts": "^6.2.6",
-    "bootstrap": "4.0.0-beta.2",
-    "core-js": "^2.6.5",
-    "d3": "^3.5.17",
-    "openlayers": "^4.6.5",
-    "rxjs": "^5.5.12",
-    "tuio-client": "git+https://git.csl-intern.local.hcu-hamburg.de/cityscope/tuio-client.git",
-    "zone.js": "^0.8.29"
+    "@angular/animations": "^7.2.11",
+    "@angular/common": "^7.2.11",
+    "@angular/compiler": "^7.2.11",
+    "@angular/core": "^7.2.11",
+    "@angular/forms": "^7.2.11",
+    "@angular/http": "^7.2.11",
+    "@angular/platform-browser": "^7.2.11",
+    "@angular/platform-browser-dynamic": "^7.2.11",
+    "@angular/router": "^7.2.11",
+    "angular-dashboard-components": "git+https://git.csl-intern.local.hcu-hamburg.de/till.degkwitz/angular-dashboard-components",
+    "angular-highcharts": "^7.2.0",
+    "bootstrap": "^4.3.1",
+    "core-js": "^3.0.0",
+    "ol-cityscope": "git+https://git.csl-intern.local.hcu-hamburg.de/cityscope/ol-cityscope",
+    "rxjs": "^6.4.0",
+    "tuio-client": "git+https://git.csl-intern.local.hcu-hamburg.de/cityscope/tuio-client",
+    "zone.js": "^0.9.0"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
-    "@angular/compiler-cli": "^5.2.11",
-    "@angular/language-service": "^5.2.11",
-    "@types/d3": "^3.5.41",
+    "@angular-devkit/build-angular": "^0.13.7",
+    "@angular/cli": "^7.3.7",
+    "@angular/compiler-cli": "^7.2.11",
+    "@angular/language-service": "^7.2.11",
     "@types/highcharts": "^5.0.39",
-    "@types/jasmine": "~2.5.53",
+    "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^6.14.4",
-    "@types/openlayers": "^4.6.16",
-    "codelyzer": "^4.5.0",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "@types/node": "^11.12.2",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "^3.3.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^4.0.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "^5.4.2",
+    "ts-node": "^8.0.3",
+    "tslint": "^5.14.0",
+    "typescript": "^3.2.4"
   }
 }
