Update to Angular 7, use ol-cityscope lib

--- a/package.json
+++ b/package.json
@@ -19,18 +19,17 @@
     "@angular/compiler": "^7.2.11",
     "@angular/core": "^7.2.11",
     "@angular/forms": "^7.2.11",
-    "@angular/http": "^7.2.11",
     "@angular/platform-browser": "^7.2.11",
     "@angular/platform-browser-dynamic": "^7.2.11",
     "@angular/router": "^7.2.11",
-    "angular-dashboard-components": "git+https://git.csl-intern.local.hcu-hamburg.de/till.degkwitz/angular-dashboard-components",
+    "angular-dashboard-components": "git+https://git.csl-intern.local.hcu-hamburg.de/till.degkwitz/angular-dashboard-components.git",
     "angular-highcharts": "^7.2.0",
-    "bootstrap": "^4.3.1",
     "core-js": "^3.0.0",
-    "ol-cityscope": "git+https://git.csl-intern.local.hcu-hamburg.de/cityscope/ol-cityscope",
+    "highcharts": "^7.0.3",
+    "ol-cityscope": "git+ssh://git@github.com/citysciencelab/ol-cityscope.git",
     "rxjs": "^6.4.0",
-    "tuio-client": "git+https://git.csl-intern.local.hcu-hamburg.de/cityscope/tuio-client",
-    "zone.js": "^0.9.0"
+    "tuio-client": "git+ssh://git@github.com/citysciencelab/tuio-client.git",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.7",
@@ -41,6 +40,7 @@
     "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^11.12.2",
+    "@types/ol": "^4.6.5",
     "codelyzer": "^5.0.0",
     "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "^4.2.1",
