--- a/src/app/config.vinnytsia.json
+++ b/src/app/config.vinnytsia.json
@@ -72,7 +72,7 @@
     {
       "name": "pois",
       "displayName": "Points of interest",
-      "topic": "pois",
+      "category": "pois",
       "type": "Vector",
       "source": {
         "url": "http://csl.local.hcuhh.de:8080/geoserver/csl/wms?service=WFS&version=1.1.0&request=GetFeature&typeName=csl:ukraine_osm_pois&outputFormat=application/json&srsname=EPSG:4326",
@@ -110,7 +110,7 @@
     {
       "name": "landuse",
       "displayName": "Landuse",
-      "topic": "landuse",
+      "category": "landuse",
       "type": "Vector",
       "source": {
         "url": "http://csl.local.hcuhh.de:8080/geoserver/csl/wms?service=WFS&version=1.1.0&request=GetFeature&typeName=csl:ukraine_osm_landuse_a&outputFormat=application/json&srsname=EPSG:4326",
