--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -6,15 +6,12 @@
     "module": "es2015",
     "allowJs": true,
     "types": [
-      "openlayers"
-    ]
+      "ol"
+    ],
+    "paths": {
+      "@angular/*": ["../node_modules/@angular/*"]
+    }
   },
-  "include": [
-    "../src/*",
-    "../node_modules/angular-dashboard-components/components/charts/*/*",
-    "../node_modules/angular-dashboard-components/components/enum/*",
-    "../node_modules/angular-dashboard-components/components/utils/*"
-  ],
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
