--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@angular/platform-browser": "^7.2.11",
     "@angular/platform-browser-dynamic": "^7.2.11",
     "@angular/router": "^7.2.11",
-    "angular-dashboard-components": "git+https://git.csl-intern.local.hcu-hamburg.de/till.degkwitz/angular-dashboard-components.git",
     "angular-highcharts": "^7.2.0",
     "core-js": "^3.0.0",
     "highcharts": "^7.0.3",
@@ -50,6 +49,7 @@
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "node-sass": "^5.0.0",
     "protractor": "^5.4.2",
     "ts-node": "^8.0.3",
     "tslint": "^5.14.0",
